--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,18 +13,18 @@ spring:
     console:
       enabled: true
 
-    datasource:
-      url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
-      driverClassName: org.h2.Driver
-      username: sa
-      password:
-  #    url: jdbc:mysql://localhost:3306/db_store
-  #    username: dbuser
-  #    password: pass123
+  datasource:
+    #    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
+    #    driverClassName: org.h2.Driver
+    #    username: sa
+    #    password:
+    url: jdbc:mysql://localhost:3306/test
+    username: dbuser
+    password: pass123
 
-#  jpa:
+  jpa:
     #database-platform: org.hibernate.dialect.
-#    hibernate.ddl-auto: create
+    hibernate.ddl-auto: create
 
 jwt:
   header: Authorization
