--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
     serialization:
       INDENT_OUTPUT: true
 
-  h2:
-    console:
-      enabled: true
+#  h2:
+#    console:
+#      enabled: true
 
   datasource:
     #    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
