--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
 
   jpa:
     #database-platform: org.hibernate.dialect.
-    hibernate.ddl-auto: create
+    hibernate.ddl-auto: update
 
 jwt:
   header: Authorization
