--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
         <jjwt.version>0.7.0</jjwt.version>
     </properties>
 
+    <repositories>
+        <!--other repositories if any-->
+        <repository>
+            <id>project.local</id>
+            <name>project</name>
+            <url>file:${project.basedir}/repo</url>
+        </repository>
+    </repositories>
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -188,28 +198,28 @@
                 <version>2.0.6</version>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <groupId>zw.paynow</groupId>
-                    <artifactId>java-sdk</artifactId>
-                    <version>1.0.0</version>
-                    <packaging>jar</packaging>
-                    <file>${basedir}/lib/zw.paynow.sdk.jar</file>
-                    <generatePom>true</generatePom>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install-jar-lib</id>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <phase>clean</phase>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-install-plugin</artifactId>-->
+                <!--<version>2.5.1</version>-->
+                <!--<configuration>-->
+                    <!--<groupId>zw.paynow</groupId>-->
+                    <!--<artifactId>java-sdk</artifactId>-->
+                    <!--<version>1.0.0</version>-->
+                    <!--<packaging>jar</packaging>-->
+                    <!--<file>${basedir}/lib/zw.paynow.sdk.jar</file>-->
+                    <!--<generatePom>true</generatePom>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>install-jar-lib</id>-->
+                        <!--<goals>-->
+                            <!--<goal>install-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>process-sources</phase>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
