--- a/pom.xml
+++ b/pom.xml
@@ -131,11 +131,13 @@
             <!--<artifactId>java-sdk</artifactId>-->
             <!--<version>1.0.0</version>-->
         <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/zw.co.paynow/java-sdk -->
         <dependency>
-            <groupId>zw.paynow</groupId>
+            <groupId>zw.co.paynow</groupId>
             <artifactId>java-sdk</artifactId>
-            <version>LATEST</version>
+            <version>1.1.0</version>
         </dependency>
+
     </dependencies>
 
     <build>
